Ajustes Precio de venta

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Almacen/SalidaMercancia.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Almacen/SalidaMercancia.cshtml
@@ -42,7 +42,7 @@
                             <div class="row clearfix">
                                 <div class="col-sm-4">
                                     <div class="form-group">
-                                        @ViewBag.Empresas
+                                        @*@ViewBag.Empresas*@
                                     </div>
                                 </div>
                             </div>
