--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Almacen/_gvProductosPartial.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Almacen/_gvProductosPartial.cshtml
@@ -15,7 +15,7 @@
             {
                 exportitem.Command = GridViewToolbarCommand.ExportToXls;
                 exportitem.Name = "CustomExportToXLS";
-                exportitem.Text = "Expotar a XLS";
+                exportitem.Text = "Exportar a XLS";
                 exportitem.ItemStyle.CssClass = "btn btn-success btn-round";                
             });         
             i.Items.Add(exportitem =>
