--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Liquidar.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Liquidar.cshtml
@@ -90,7 +90,7 @@
                                     </div>
                                     <div class="col-md-4">
                                         <div class="form-group">
-                                            <b>Puunto de venta:</b>
+                                            <b>Punto de venta:</b>
                                             @Html.LabelFor(model => model.NombreUnidad, Model.NombreUnidad, new { @class = "form-control" })
                                         </div>
                                     </div>
