--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/Nuevo.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/Nuevo.cshtml
@@ -262,7 +262,7 @@
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                Listros de Crédito<input name="limiteCreditoMonto" value="@Model.limiteCreditoMonto" class="form-control" type="number" />
+                                Litros de Crédito<input name="limiteCreditoMonto" value="@Model.limiteCreditoMonto" class="form-control" type="number" />
                             </div>
                         </div>
                         <div class="col-md-3">
@@ -276,7 +276,7 @@
                         <div class="col-md-3">
                             <div class="form-group">
                                 <div>
-                                    Credito disponible (En litros):
+                                    Crédito disponible (En litros):
                                     <input name="CreditoDisponibleMonto" value="@Model.CreditoDisponibleMonto" class="form-control" type="number" />
                                 </div>
                             </div>
