--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/LineaProducto.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/LineaProducto.cshtml
@@ -48,7 +48,7 @@
                         <h2>Línea de Producto</h2>
                         <ul class="breadcrumb padding-0">
                             <li class="breadcrumb-item"><a href="index.html"><i class="zmdi zmdi-home"></i></a></li>
-                            <li class="breadcrumb-item active">Producto / Línea de Porducto</li>
+                            <li class="breadcrumb-item active">Producto / Línea de Producto</li>
                         </ul>
                     </div>
                 </div>
