--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Remanente/DashBoard.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Remanente/DashBoard.cshtml
@@ -138,7 +138,7 @@
                                                 <td><strong>Ventas (Camionetas y Pipas)</strong></td>
                                                 <td><strong>Carburación</strong></td>
                                                 <td><strong>Inv. Final(Libro)</strong></td>
-                                                <td><strong>Inv. Físicio</strong></td>
+                                                <td><strong>Inv. Físico</strong></td>
                                                 <td><strong>Gas sobrante</strong></td>
                                                 <td><strong>Rema (%)</strong></td>
                                             </tr>
