--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/InventarioXPuntoVenta.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/InventarioXPuntoVenta.cshtml
@@ -81,7 +81,7 @@
 </style>
 
 <body>
-    <div id="dialog" title="Fotógragia">
+    <div id="dialog" title="Fotografía">
         <div id="imgdialog"></div>
     </div>
 
