--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/_CB_Requisiciones.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/_CB_Requisiciones.cshtml
@@ -29,7 +29,7 @@
         });
         settings.Columns.Add("NombreComercial", "Gasera");
         settings.Columns.Add("NumeroRequisicion", "N° Requisición");
-        settings.Columns.Add("FechaRequerida", "Fecha Requerida");
+        settings.Columns.Add("FechaRequerida", "Fecha Requerida").PropertiesEdit.DisplayFormatString ="d";
         settings.Columns.Add("UsuarioSolicitante", "Solicitante");
         settings.Columns.Add("RequisicionEstatus", "Estatus");
         settings.Columns.Add("IdRequisicionEstatus").Visible = false;
