--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Mantenimiento.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Mantenimiento.cshtml
@@ -18,7 +18,7 @@
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <div class="card text-center">
                     <div class="body">
-                        <h5>La página que estás buscando se encunetra en mantenimiento</h5>
+                        <h5>La página que estás buscando se encuentra en mantenimiento</h5>
                     </div>
                 </div>
             </div>
