--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/_ProductComplementoPartial.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/_ProductComplementoPartial.cshtml
@@ -45,7 +45,7 @@
         });
         settings.Columns.Add(c =>
         {
-            c.FieldName = "CantidadAComprar";
+            c.FieldName = "Cantidad";
             c.Caption = "Requeridos";
             c.Width = System.Web.UI.WebControls.Unit.Percentage(10);
             c.Settings.AllowSort = DefaultBoolean.False;
