--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/CorteCaja.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/CorteCaja.cshtml
@@ -46,7 +46,7 @@
                         <div class="body">
                             <div class="row clearfix">
                                 <div class="col-md-3">
-                                    <strong>Al dia</strong>
+                                    <strong>Del día</strong>
                                     <div class="form-group">
 
                                         @Html.DevExpress().DateEdit(settings =>
