--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/GastoVehicular.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/GastoVehicular.cshtml
@@ -3,7 +3,6 @@
 @Html.DevExpress().GetStyleSheets(
         new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout, Theme = "Material" },
         new StyleSheet { ExtensionSuite = ExtensionSuite.Editors, Theme = "Material" },
-        new StyleSheet { ExtensionSuite = ExtensionSuite.GridView, Theme = "Material" },
         new StyleSheet { ExtensionSuite = ExtensionSuite.GridView, Theme = "Material" }
     )
 @Html.DevExpress().GetScripts(
@@ -46,7 +45,7 @@
                         <div class="body">
                             <div class="row clearfix">
                                 <div class="col-md-3">
-                                    <strong>Al dia</strong>
+                                    <strong>Del día</strong>
                                     <div class="form-group">
                                         @Html.DevExpress().DateEdit(settings =>
                                         {
@@ -59,7 +58,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-3">
-                                    <strong>Al dia</strong>
+                                    <strong>Al día</strong>
                                     <div class="form-group">
                                         @Html.DevExpress().DateEdit(settings =>
                                         {
