--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/OrdenCompraRep.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/OrdenCompraRep.cshtml
@@ -19,9 +19,6 @@
     if (mensaje != '') {
         $(window).on("load", showNotification('alert-success', mensaje, 'top', 'center', '', ''));
     }
-
-
-
 </script>
 <body>
     <div class="page-loader-wrapper">
@@ -49,7 +46,7 @@
                         <div class="body">
                             <div class="row clearfix">
                                 <div class="col-md-3">
-                                    <strong>Al dia</strong>
+                                    <strong>Del día</strong>
                                     <div class="form-group">
                                         @Html.DevExpress().DateEdit(settings =>
                                         {
@@ -62,7 +59,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-3">
-                                    <strong>Al dia</strong>
+                                    <strong>Al día</strong>
                                     <div class="form-group">
                                         @Html.DevExpress().DateEdit(settings =>
                                         {
