--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_main.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent">
 
     <android.support.constraint.ConstraintLayout
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -174,6 +173,30 @@
                     app:layout_constraintTop_toBottomOf="@+id/imageView" />
             </android.support.constraint.ConstraintLayout>
         </android.support.v7.widget.CardView>
-
     </android.support.constraint.ConstraintLayout>
+<!--
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="64dp"
+        tools:layout_editor_absoluteY="459dp"
+        >
+
+        <EditText
+            app:layout_constraintTop_toBottomOf="@+id/login_button"
+            android:padding="10px"
+            android:id="@+id/editText"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:textSize="12dp"
+            android:inputType="textPostalAddress"
+            android:text="@string/LigaActualizacion"
+            android:textAlignment="center"
+            android:textColor="@color/cardview_light_background"
+            tools:layout_editor_absoluteX="109dp"
+            tools:layout_editor_absoluteY="429dp" />
+    </LinearLayout>
+-->
+
 </ScrollView>
