--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PrecioVenta/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PrecioVenta/Index.cshtml
@@ -508,10 +508,10 @@
                                 </div>
 
                                 <div class="col-md-3 form-control-label" style="border-radius:20px;">
-                                    <label for="ddlEstacionCarburacion">Estación de carburación</label>
+                                    <label for="ddlEstacionCarburacion">Asignado a:</label>
                                     <div class="form-group" >
                                         <select id="Estacion" name="Estacion" class="form-control z-index" data-live-search="true">
-                                            <option value="-1">Seleccione uno</option>
+                                            <option value="-1">GENERAL</option>
                                             <option value="0">PRECIO PARA ESTACIONES</option>
                                             @if (ViewBag.EstacionesCarburacion != null)
                                             {
