--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/Error.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/Error.cshtml
@@ -31,7 +31,9 @@
                         <i class="zmdi zmdi-block"></i>
                     </div>
                     <strong>
-                        Acción inesperada o dirección no encontrada. Si este mensaje persiste, favor de comunicarlo al administrador del sistema
+                        Acción inesperada o dirección no encontrada. Si este mensaje persiste, favor de comunicarlo al administrador del sistema 
+                        <br />
+                        Mensaje del sistema: @Model.Exception.Message
                     </strong>
                 </div>
             </div>
