--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Liquidar.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Liquidar.cshtml
@@ -201,7 +201,7 @@
                                             <div class="table-responsive">
                                                 @if (TempData["FolioVenta"] != null)
                                                 {
-                                                    @Html.Partial("_tikets", Model.Tickets)
+                                                    @Html.Partial("_Tikets", Model.Tickets)
                                                 }
                                             </div>
                                         </div>
@@ -281,45 +281,5 @@
             </div>
         </section>
     }
-    @*<script type="text/javascript">
-
-            $(document).ready(function () {
-
-
-
-                MVCxClientGlobalEvents.AddControlsInitializedEventHandler(AttachEditorValueChangedEvent);
-
-                function AttachEditorValueChangedEvent() {
-                    var demoOptionNames = ["EditMode", "StartEditAction", "HighlightDeletedRows"];
-                    $.each(demoOptionNames, function (i, name) {
-                        var editor = ASPxClientControl.GetControlCollection().GetByName(name);
-                    });
-                }
-                function OnBatchEditEndEditing(s, e) {
-                    s.batchEditApi.SetCellValue(e.visibleIndex, null, true);
-                }
-                function OnBeginGridCallback(s, e) {
-                    e.customArgs = MVCxClientUtils.GetSerializedEditorValuesInContainer("options");
-                }
-
-
-                MVCxClientGlobalEvents.AddControlsInitializedEventHandler(AttachEditorValueChangedEvent);
-
-                function AttachEditorValueChangedEvent() {
-                    var demoOptionNames = ["EditMode", "StartEditAction", "HighlightDeletedRows"];
-                    $.each(demoOptionNames, function (i, name) {
-                        var editor = ASPxClientControl.GetControlCollection().GetByName(name);
-                    });
-                }
-                function OnBatchEditEndEditing(s, e) {
-                    s.batchEditApi.SetCellValue(e.visibleIndex, null, true);
-                }
-                function OnBeginGridCallback(s, e) {
-                    e.customArgs = MVCxClientUtils.GetSerializedEditorValuesInContainer("options");
-                }
-
-            });
-
-        </script>*@
 </body>
 </html>
