--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/_Tikets.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/_Tikets.cshtml
@@ -1,10 +1,12 @@
-﻿
-
-@{
+﻿@{
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "_Tikets";
-        settings.CallbackRouteValues = new { Controller = "CajaGeneral", Action = "BatchEditingPartial" };
+        settings.CallbackRouteValues = new
+        {
+            Controller = "CajaGeneral",
+            Action = "BatchEditingPartial"
+        };
         settings.SettingsEditing.BatchUpdateRouteValues = new { Controller = "CajaGeneral", Action = "FormaDePagoPartialUpdate" };
         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
         settings.KeyFieldName = "FolioVenta";
@@ -27,8 +29,6 @@
         settings.ClientSideEvents.BatchEditEndEditing = "OnBatchEditEndEditing";
         settings.Styles.Table.CssClass = "table";
         settings.SettingsCommandButton.UpdateButton.Text = "Guardar cambios";
-        //settings.SettingsCommandButton.UpdateButton.Styles.CssPostfix = "btn btn-raised btn-primary btn-round btn-md";
-
         settings.Columns.Add(c =>
         {
             c.FieldName = "FolioVenta";
@@ -44,47 +44,27 @@
             c.Settings.AllowSort = DefaultBoolean.False;
             c.EditFormSettings.Visible = DefaultBoolean.False;
         });
-
         settings.Columns.Add(c =>
         {
             c.FieldName = "FormaDePago";
             c.Caption = "Forma De Pago";
-            c.Visible = true;
-            c.Settings.AllowSort = DefaultBoolean.False;   
-            if (TempData["Tipo"].ToString() == "Contado")
+            c.Settings.AllowSort = DefaultBoolean.False;
+            c.Settings.AllowSort = DefaultBoolean.False;
+            c.EditorProperties().ComboBox(p =>
             {
-                c.Settings.AllowSort = DefaultBoolean.False;
-                c.EditorProperties().ComboBox(p =>
-                {
-                    p.TextField = "Text";
-                    p.ValueField = "Value";
-                    p.ValueType = typeof(string);
-                    p.DataSource = TempData["FormaPago"];
-                });
-            }
-            else
-            {
-                c.Visible = false;
-
-            }
-            //});
-
+                p.TextField = "Text";
+                p.ValueField = "Value";
+                p.ValueType = typeof(string);
+                p.DataSource = MVC.Presentacion.Controllers.CajaGeneralController.ListaFormaPago();
+            });
         });
         settings.Columns.Add(c =>
         {
             c.FieldName = "Referencia";
             c.Caption = "Referencia";
             c.Visible = true;
-            if (TempData["Tipo"].ToString() == "Contado")
-            {
-                c.Visible = true;
-            }
-            else
-            {
-                c.Visible = false;
-            }
         });
-        settings.Columns.Add(c=>
+        settings.Columns.Add(c =>
         {
             c.FieldName = "CantidadVendida";
             c.Caption = "Cantidad";
@@ -119,8 +99,6 @@
             c.Settings.AllowSort = DefaultBoolean.False;
             c.EditFormSettings.Visible = DefaultBoolean.False;
         });
-
-
         settings.CellEditorInitialize = (s, e) =>
         {
             ASPxEdit editor = (ASPxEdit)e.Editor;
@@ -128,5 +106,5 @@
         };
         settings.ClientSideEvents.BeginCallback = "OnBeginGridCallback";
     });
-    }
-    @grid.Bind(Model).GetHtml()
+}
+@grid.Bind(Model).GetHtml()
