--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/CarteraVencida.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/CarteraVencida.cshtml
@@ -125,51 +125,11 @@
                             <div style="text-align:center"><strong>@ViewBag.IdCliente</strong></div>
                             <div class="row clearfix blockquote blockquote-info btn-round">
                                 <div class="table-responsive">
-                                    @Html.Partial("_CarteraVencidaPartial", Model.reportedet)
-                                    @*<table class="table table-striped table-hover">
-                                        <thead>
-                                            <tr>
-                                                <th>Cliente</th>
-                                                <th>Fecha</th>
-                                                <th>Fecha Vencimiento</th>
-                                                <th>Ticket</th>
-                                                <th>Serie</th>
-                                                <th>Saldo Actual</th>
-                                                <th>Saldo corriente</th>
-                                                <th>Vencido</th>
-                                                <th>Días 1-7</th>
-                                                <th>8-16</th>
-                                                <th>17-31</th>
-                                                <th>32-61</th>
-                                                <th>62-91</th>
-                                                <th>más 91</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            @if (Model != null)
-                                            {
-                                                foreach (var item in Model.reportedet)
-                                                {                                                   
-                                                    <tr>
-                                                        <td>@item.Nombre</td>
-                                                        <td>@item.FechaRegistro</td>
-                                                        <td>@item.FechaVencimiento</td>
-                                                        <td>@item.Ticket</td>
-                                                        <td>@item.Serie</td>
-                                                        <td>@item.SaldoActual</td>
-                                                        <td>@item.SaldoCorriente</td>
-                                                        <td>@item.SaldoVencido</td>
-                                                        <td>@item.Dias1a7</td>
-                                                        <td>@item.Dias8a16</td>
-                                                        <td>@item.Dias17a31</td>
-                                                        <td>@item.Dias32a61</td>
-                                                        <td>@item.Dias62a91</td>
-                                                        <td>@item.Mas91</td>
-                                                    </tr>                                                   
-                                                }
-                                            }
-                                        </tbody>
-                                    </table>*@
+                                    @if (Model != null && Model.reportedet != null)
+                                    {
+                                        @Html.Partial("_CarteraVencidaPartial", Model.reportedet)
+                                    }                            
+                                  
                                 </div>
                             </div><div style="text-align:center"><strong>Global</strong></div>
                             <div class="row clearfix blockquote blockquote-info btn-round">
