Ajustes de ventas, busqueda de clientes

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraComplementoGas.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraComplementoGas.cshtml
@@ -538,7 +538,7 @@
                                                                         <option value="@item.Value">@item.Text</option>
                                                                     }
                                                                 }
-
+                                                                @*<option value="12">12%</option>*@
                                                             </select>
                                                             @Html.ValidationMessageFor(m => m.OrdenCompraExpedidor.Iva, "", new { @class = "alert-danger" })
                                                         </div>
