Ajustes, editor tickets, mejora de busqueda de clientes movil

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Inicio.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Inicio.cshtml
@@ -8,10 +8,10 @@
 <script>
     window.onload = function() {
         var ctx = document.getElementById('myChart').getContext('2d');
-        var myChart = new Chart(ctx, @Html.Raw(ViewBag.VentasRema.Json));
+        //var myChart = new Chart(ctx, @Html.Raw(ViewBag.VentasRema.Json));
 
         var ctx = document.getElementById('CallCenter').getContext('2d');
-        var myChart = new Chart(ctx, @Html.Raw(ViewBag.CallCenter));
+        //var myChart = new Chart(ctx, @Html.Raw(ViewBag.CallCenter));
     }
 </script>
 <section class="content home">
