Ajustes Precio programados

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Liquidar.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Liquidar.cshtml
@@ -224,7 +224,8 @@
                                         <div class="col-sm-4">
                                             @Html.LabelFor(model => model.TotalOtros, Model.TotalOtros.ToString(), new { @class = "form-control" })
                                         </div>
-                                    </div><br />
+                                    </div>
+
                                     <div class="row clearfix">
                                         <div class="col-sm-8" style="text-align:right">
                                             <b>Creditos:</b>
@@ -232,7 +233,7 @@
                                         <div class="col-sm-4">
                                             @Html.LabelFor(model => model.TotalCredito, Model.TotalCredito.ToString(), new { @class = "form-control" })
                                         </div>
-                                    </div><br />
+                                    </div>
                                     <div class="row clearfix">
                                         <div class="col-sm-8" style="text-align:right">
                                             <b>Descuentos:</b>
@@ -240,7 +241,7 @@
                                         <div class="col-sm-4">
                                             @Html.LabelFor(model => model.Descuentos, Model.Descuentos.ToString(), new { @class = "form-control" })
                                         </div>
-                                    </div><br />
+                                    </div>
                                     <div class="row clearfix">
                                         <div class="col-sm-8" style="text-align:right">
                                             <b>Bonificaciones:</b>
@@ -248,7 +249,23 @@
                                         <div class="col-sm-4">
                                             @Html.LabelFor(model => model.Bonidificaciones, Model.Bonidificaciones.ToString(), new { @class = "form-control" })
                                         </div>
-                                    </div><br />
+                                    </div>
+                                    <div class="row clearfix">
+                                        <div class="col-sm-8" style="text-align:right">
+                                            <b>Total en cheques:</b>
+                                        </div>
+                                        <div class="col-sm-4">
+                                            @Html.LabelFor(model => model.TotalCheques, Model.TotalCheques.ToString(), new { @class = "form-control" })
+                                        </div>
+                                    </div>
+                                    <div class="row clearfix">
+                                        <div class="col-sm-8" style="text-align:right">
+                                            <b>Total en Transferencias:</b>
+                                        </div>
+                                        <div class="col-sm-4">
+                                            @Html.LabelFor(model => model.TotalTransferencias, Model.TotalTransferencias.ToString(), new { @class = "form-control" })
+                                        </div>
+                                    </div>
                                     <div class="row clearfix">
                                         <div class="col-sm-8" style="text-align:right">
                                             <b>Efectivo a recibir:</b>
@@ -256,7 +273,7 @@
                                         <div class="col-sm-4">
                                             @Html.LabelFor(model => model.TotalEfectio, Model.TotalEfectio.ToString(), new { @class = "form-control" })
                                         </div>
-                                    </div><br />
+                                    </div>
                                     <div class="row clearfix">
                                         <div class="col-sm-8" style="text-align:right">
                                             <b>¿Todo esta correcto?:</b>
