--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Index.cshtml
@@ -53,7 +53,7 @@
                                         <li>
                                             <div class="demo-google-material-icon">
                                                 <a href="http://97.74.232.9/SAGAS_APK/app-sagas-release.apk">
-                                                    <i class="material-icons">android</i> <span class="icon-name">App móvil (v1.0.20200416)</span>
+                                                    <i class="material-icons">android</i> <span class="icon-name">App móvil (v1.0.2)</span>
                                                 </a>
                                             </div>
                                         </li>
