--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Inicio.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Inicio.cshtml
@@ -8,10 +8,10 @@
 <script>
     window.onload = function() {
         var ctx = document.getElementById('myChart').getContext('2d');
-        //var myChart = new Chart(ctx, @Html.Raw(ViewBag.VentasRema.Json));
+        var myChart = new Chart(ctx, @Html.Raw(ViewBag.VentasRema?.Json ?? string.Empty));
 
         var ctx = document.getElementById('CallCenter').getContext('2d');
-        //var myChart = new Chart(ctx, @Html.Raw(ViewBag.CallCenter));
+        var myChart = new Chart(ctx, @Html.Raw(ViewBag.CallCenter ?? string.Empty));
     }
 </script>
 <section class="content home">
@@ -36,7 +36,7 @@
                 </div>
             </div>
         </div>
-        @if (rol.Ventas)
+        @if (rol.Ventas && ViewBag.VentasRema != null)
         {
             <div class="header">
                 <p><strong>Ventas </strong> Indicador del mes de <strong> @System.Globalization.CultureInfo.CurrentCulture.TextInfo.ToTitleCase(DateTime.Now.ToString("MMMM"))</strong></p>
@@ -98,7 +98,7 @@
                 </div>
             </div>
         }
-        @if (rol.Ventas)
+        @if (rol.Ventas && ViewBag.CallCenter != null)
         {
             <div class="row clearfix">
                 <div class="col-lg-12 col-md-12 col-sm-12">
@@ -113,13 +113,13 @@
                 </div>
             </div>
         }
-        @if (rol.CatProducto || rol.CompraOrdenCompra || rol.Almacen)
+        @if ((rol.CatProducto || rol.CompraOrdenCompra || rol.Almacen) && ViewBag.Anden != null)
         {
             <div class="header">
                 <p><strong>Andén:</strong> Información general del mes <strong> @System.Globalization.CultureInfo.CurrentCulture.TextInfo.ToTitleCase(DateTime.Now.ToString("MMMM"))</strong></p>
             </div>
             <div class="row clearfix">
-                @if (rol.CatProducto || rol.Almacen)
+                @if ((rol.CatProducto || rol.Almacen) && ViewBag.Anden != null)
                 {
 
                     <div class="col-lg-4 col-md-6">
@@ -133,7 +133,7 @@
                         </div>
                     </div>
                 }
-                @if (rol.CatProducto || rol.CompraOrdenCompra || rol.Almacen)
+                @if ((rol.CatProducto || rol.CompraOrdenCompra || rol.Almacen) && ViewBag.Anden != null)
                 {
                     <div class="col-lg-4 col-md-6">
                         <div class="card text-center">
@@ -146,7 +146,7 @@
                         </div>
                     </div>
                 }
-                @if (rol.Almacen)
+                @if (rol.Almacen && ViewBag.Anden != null)
                 {
                     <div class="col-lg-4 col-md-6">
                         <div class="card text-center">
@@ -162,7 +162,7 @@
                 }
             </div>
         }
-        @if (rol.CatPuntosVenta)
+        @if (rol.CatPuntosVenta && ViewBag.Anden != null)
         {
             <div class="row clearfix">
                 <div class="col-lg-12 col-md-12">
@@ -173,7 +173,7 @@
                                     <address>
                                         <strong>Últimas 5 ventas</strong>
                                         <br><strong>Nota importante:</strong>
-                                        <br>Las ventas, son mostradas conforme 
+                                        <br>Las ventas, son mostradas conforme
                                         <br>se sincroniza la información de los puntos de venta.
                                     </address>
                                 </div>
@@ -207,7 +207,7 @@
                 </div>
             </div>
         }
-        @if (rol.CCRecuperado)
+        @if (rol.CCRecuperado && ViewBag.Cartera != null)
         {
             <div class="header">
                 <p><strong>Credito y cobranza: </strong> Indicador del mes de <strong> @System.Globalization.CultureInfo.CurrentCulture.TextInfo.ToTitleCase(DateTime.Now.ToString("MMMM"))</strong></p>
@@ -259,7 +259,7 @@
                 </div>
             </div>
         }
-        @if (rol.CCVencida)
+        @if (rol.CCVencida && ViewBag.Cartera != null)
         {
             <div class="row clearfix">
                 <div class="col-lg-12 col-md-12">
@@ -304,7 +304,7 @@
                 </div>
             </div>
         }
-        @if (rol.CatClientes)
+        @if (rol.CatClientes && ViewBag.Cartera != null)
         {
             <div class="row clearfix">
                 <div class="col-lg-6 col-md-6">
@@ -383,7 +383,7 @@
                 </div>
             </div>
         }
-        @if (rol.Ventas)
+        @if (rol.Ventas && ViewBag.Caja != null)
         {
             <div class="header">
                 <p><strong>Caja General: </strong> Indicador del mes de <strong> @System.Globalization.CultureInfo.CurrentCulture.TextInfo.ToTitleCase(DateTime.Now.ToString("MMMM"))</strong></p>
@@ -394,7 +394,7 @@
                         <div class="body">
                             <p class="m-b-20"><i class="material-icons zmdi-hc-3x col-amber">battery_full</i></p>
                             <span>Venta de Camionetas</span>
-                            <h3 class="m-b-10">$<span class="number count-to" data-from="0" data-to="@ViewBag.Caja.TotalCamionetas" data-speed="2000" data-fresh-interval="700">@ViewBag.VentasRema.TotalCamionetas</span></h3>
+                            <h3 class="m-b-10">$<span class="number count-to" data-from="0" data-to="@ViewBag.Caja.TotalCamionetas" data-speed="2000" data-fresh-interval="700">@ViewBag.Caja.TotalCamionetas</span></h3>
                             <small class="text-muted">Pesos</small>
                         </div>
                     </div>
@@ -404,7 +404,7 @@
                         <div class="body">
                             <p class="m-b-20"><i class="material-icons zmdi-hc-3x col-blue">local_shipping</i></p>
                             <span>Venta de Pipas</span>
-                            <h3 class="m-b-10">$<span class="number count-to" data-from="0" data-to="@ViewBag.Caja.TotalPipas" data-speed="2000" data-fresh-interval="700">@ViewBag.VentasRema.TotalPipas</span></h3>
+                            <h3 class="m-b-10">$<span class="number count-to" data-from="0" data-to="@ViewBag.Caja.TotalPipas" data-speed="2000" data-fresh-interval="700">@ViewBag.Caja.TotalPipas</span></h3>
                             <small class="text-muted">Pesos</small>
                         </div>
                     </div>
@@ -414,7 +414,7 @@
                         <div class="body">
                             <p class="m-b-20"><i class="material-icons zmdi-hc-3x col-red">local_gas_station</i></p>
                             <span>Venta de Estaciones</span>
-                            <h3 class="m-b-10">$<span class="number count-to" data-from="0" data-to="@ViewBag.Caja.TotalEstaciones" data-speed="2000" data-fresh-interval="700">@ViewBag.VentasRema.TotalEstaciones</span></h3>
+                            <h3 class="m-b-10">$<span class="number count-to" data-from="0" data-to="@ViewBag.Caja.TotalEstaciones" data-speed="2000" data-fresh-interval="700">@ViewBag.Caja.TotalEstaciones</span></h3>
                             <small class="text-muted">Pesos</small>
                         </div>
 
@@ -425,7 +425,7 @@
                         <div class="body">
                             <p class="m-b-20"><i class="material-icons zmdi-hc-3x col-green">functions</i></p>
                             <span>Total de ventas</span>
-                            <h3 class="m-b-10">$<span class="number count-to" data-from="0" data-to="@ViewBag.Caja.TotalVetna" data-speed="2000" data-fresh-interval="700">@ViewBag.VentasRema.TotalVetna</span></h3>
+                            <h3 class="m-b-10">$<span class="number count-to" data-from="0" data-to="@ViewBag.Caja.TotalVetna" data-speed="2000" data-fresh-interval="700">@ViewBag.Caja.TotalVetna</span></h3>
                             <small class="text-muted">Pesos</small>
                         </div>
                     </div>
