--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/cliente_item.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/cliente_item.xml
@@ -27,14 +27,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="3sp"
-                android:paddingStart="15dp"
-                android:paddingEnd="22dp"
+                android:paddingLeft="15dp"
+                android:paddingRight="22dp"
                 android:text="@string/cel"
                 android:textAlignment="center"
                 android:textSize="14sp"
                 app:layout_column="0"
                 app:layout_gravity="fill"
-                app:layout_row="0" />
+                app:layout_row="0"
+                android:gravity="center_horizontal" />
 
             <TextView
                 android:id="@+id/TVBuscarClienteActivityTelefono"
@@ -60,7 +61,8 @@
                 android:textSize="14sp"
                 app:layout_column="0"
                 app:layout_gravity="fill"
-                app:layout_row="1" />
+                app:layout_row="1"
+                android:gravity="center_horizontal" />
 
             <TextView
                 android:id="@+id/TVBuscarClienteActivityNombre"
@@ -78,20 +80,22 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="3sp"
-                android:paddingStart="15dp"
-                android:paddingEnd="23dp"
+                android:paddingLeft="15dp"
+                android:paddingRight="23dp"
                 android:text="@string/rfc"
                 android:textSize="14sp"
                 app:layout_column="0"
                 app:layout_gravity="fill"
-                app:layout_row="2" />
+                app:layout_row="2"
+                android:textAlignment="center"
+                android:gravity="center_horizontal"/>
 
             <TextView
                 android:id="@+id/TVBuscarClienteaCTIVITYrFC"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="3sp"
-                android:layout_marginEnd="15sp"
+                android:layout_marginRight="15sp"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_column="1"
@@ -103,22 +107,24 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="3sp"
-                android:layout_marginStart="15sp"
                 android:text="@string/factura"
                 android:textSize="14sp"
-                app:layout_column="2"
+                app:layout_column="0"
                 app:layout_gravity="fill"
-                app:layout_row="2" />
+                app:layout_row="3"
+                android:layout_marginLeft="15sp"
+                android:textAlignment="center"
+                android:gravity="center_horizontal"/>
 
             <TextView
                 android:id="@+id/TvBuscarClienteActivityFactura"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="3sp"
                 android:textSize="14sp"
-                app:layout_column="3"
+                app:layout_column="1"
                 app:layout_gravity="fill"
-                app:layout_row="2" />
+                app:layout_row="3" />
         </android.support.v7.widget.GridLayout>
     </android.support.v7.widget.CardView>
 
